namespace EasySave.src.Models.Data
{
    public enum JobStatus
    {        
        Running,
        Paused,
        Finished,
        Cancelled,
        Error
    }
}