using System;
using EasySave.src.Render;

namespace EasySave.src
{
    internal class Program
    {
        protected Program()
        {
        }

        protected static void Main(string[] args)
        {
            View v = new View();
            v.Start();
        }
    }
}


