namespace EasySave.src.Render
{
    public enum RenderMethod
    {
        Home,
        CreateSave,
        LoadSave,
        EditSave,
        DeleteSave
    }
}
